--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,9 @@
-<p>home works!</p>
+<div class="row">
+    <div class="col-md-5">
+       <p>Welcome Message</p>
+       <p>Bild</p>
+    </div>
+    <div class="col-md-5">
+      <p>Beschreibung</p>
+    </div>
+</div>
