--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,10 +1,35 @@
-<nav class="navbar navbar-default">
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container-fluid">
+    <a style="cursor: pointer;" class="navbar-brand">LPIC 1 LCE App</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+        <div class="d-flex">
+        </div>
+      <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+        <ul class="navbar-nav ms-auto mb-2 mb-lg-0 ">
+                <li class="nav-item" routerLinkActive="active"><a class="nav-link" routerLink="/home">Startseite</a></li>
+                <li class="nav-item" routerLinkActive="active"><a class="nav-link" routerLink="/learn-modus">Learn Modus</a></li>
+                <li class="nav-item" routerLinkActive="active"><a class="nav-link" routerLink="/check-modus">Check Modus</a></li>
+                <li class="nav-item" routerLinkActive="active"><a class="nav-link" routerLink="/exam-modus">Exam Modus</a></li>
+              </ul> 
+      </div>
+    </div>
+  </nav>
+
+
+
+
+
+
+<!-- 
+<nav class="navbar navbar-light bg-light">
     <div class="container-fluid">
         <div class="navbar-header">
             <a style="cursor: pointer;" class="navbar-brand">LPIC 1 LCE App</a>
         </div>
         <div class="collapse navbar-collapse">
-            <ul class="nav navbar-nav">
+            <ul class="nav navbar-nav navbar-right">
                 <li routerLinkActive="active"><a routerLink="/home">Startseite</a></li>
                 <li routerLinkActive="active"><a routerLink="/learn-modus">Learn Modus</a></li>
                 <li routerLinkActive="active"><a routerLink="/check-modus">Check Modus</a></li>
@@ -13,4 +38,4 @@
         </div>
     </div>
 
-</nav>
+</nav> -->
