--- a/src/app/learn-modus/learn-modus.component.html
+++ b/src/app/learn-modus/learn-modus.component.html
@@ -1,21 +1,22 @@
 
 <div class="card text-center">
     <div class="card-header">
-        <ul class="nav nav-pills card-header-pills">
+        <ul class="nav nav-tabs card-header-tabs">
             <li class="nav-item">
-                <a class="nav-link active" data-bs-toggle="tab" routerLinkActive="active" routerLink="single-modus" >Single Modus</a>
+                <a class="nav-link active" data-bs-toggle="tab" routerLinkActive="active" routerLink="single-modus" #multi>Single Modus</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link active" data-bs-toggle="tab" routerLinkActive="active" routerLink="multi-modus" >Multi Modus</a>
+                <a  class="nav-link" data-bs-toggle="tab" routerLinkActive="active" routerLink="multi-modus" #single>Multi Modus</a>
             </li>
         </ul>
     </div>
     <div class="card-body">
         <div class="tab-content">
-            <div class="tab-pane fade show active" id="single-modus">
+            <div class="tab-pane fade show active" id="single">
                 <app-single-modus></app-single-modus>
             </div>
-            <div class="tab-pane fade" id="multi-modus">
+            <div class="tab-pane fade" id="multi">
+                <app-multi-modus></app-multi-modus>
                 <div class="col-6">
                     <div class="card border-dark mb-4">
                         <div class="card-body text-dark">
@@ -24,7 +25,7 @@
                         </div>
                     </div>
                 </div>
-                <app-multi-modus></app-multi-modus>
+          
             </div>
         </div>
     </div>
