--- a/src/app/learn-modus/learn-modus.component.html
+++ b/src/app/learn-modus/learn-modus.component.html
@@ -14,18 +14,10 @@
         <div class="tab-content">
             <div class="tab-pane fade show active" id="single">
                 <app-single-modus></app-single-modus>
+
             </div>
-            <div class="tab-pane fade" id="multi">
+            <div class="tab-pane fade show active" id="multi">
                 <app-multi-modus></app-multi-modus>
-                <div class="col-6">
-                    <div class="card border-dark mb-4">
-                        <div class="card-body text-dark">
-                            <h5 class="card-title">Dark card title</h5>
-                            <p class="card-text">Some dummy text to make up the card's content. You can replace it anytime.</p>
-                        </div>
-                    </div>
-                </div>
-          
             </div>
         </div>
     </div>
