--- a/src/app/learn-modus/single-modus/single-modus.component.html
+++ b/src/app/learn-modus/single-modus/single-modus.component.html
@@ -1,1 +1,12 @@
 <p>single-modus works!</p>
+<div class="tab-pane fade" id="multi">
+    <div class="col-6">
+        <div class="card border-dark mb-4">
+            <div class="card-body text-dark">
+                <h5 class="card-title">Dark card title</h5>
+                <p class="card-text">Some dummy text to make up the card's content. You can replace it anytime.</p>
+            </div>
+        </div>
+    </div>
+
+</div>
