--- a/src/app/check-modus/check-modus.component.html
+++ b/src/app/check-modus/check-modus.component.html
@@ -1,1 +1,22 @@
-<p>check-modus works!</p>
+<div class="container mt-3">
+    <div class="card text-center">
+<div class="card">
+    <div class="card-header">
+        <h6 class="card-title">Card title</h6>
+        <h6 class="card-text">This is a question sample</h6>
+    </div>
+    <ul class="list-group list-group-flush">
+            <li class="list-group-item">An item</li>
+            <li class="list-group-item">A second item</li>
+            <li class="list-group-item">A third item</li>
+            <li class="list-group-item">A third item</li>
+    </ul>
+    <div> <button type="button" class="btn btn-outline-success mt-3 mb-3">Show Correct Answer</button></div>
+</div>
+
+</div>
+<div class="row justify-content-between mt-3">
+<div class="col-2"><button type="button" class="btn btn-outline-secondary">Prev</button></div>
+<div class="col-1"><button type="button" class="btn btn-outline-secondary">Next</button></div>
+</div>
+</div>
