--- a/src/app/learn-modus/multi-modus/multi-modus.component.html
+++ b/src/app/learn-modus/multi-modus/multi-modus.component.html
@@ -1,1 +1,14 @@
-<p>multi-modus works!</p>
+<div *ngFor="let question of questions">
+
+    <div class="card mt-3">
+        <div class="card-header">
+            <h6 class="card-title">Question: {{question.id}}</h6>
+            <h6 class="card-text">{{question.question}}</h6>
+        </div>
+            <ul class="list-group list-group-flush"  *ngFor="let answer of question.answers">
+                <li *ngIf="question.type !== 'fillIn'"  class="list-group-item">{{answer}}</li>
+            </ul>
+        <div> <button type="button" class="btn btn-outline-success mt-3 mb-3">Show Correct Answer</button></div>
+    </div>
+    
+</div>
