--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,9 +1,9 @@
-<div class="row">
-    <div class="col-md-5">
+<div class="container">
+    <div class="col">
        <p>Welcome Message</p>
        <p>Bild</p>
     </div>
-    <div class="col-md-5">
+    <div class="col">
       <p>Beschreibung</p>
     </div>
 </div>
