--- a/src/app/learn-modus/single-modus/single-modus.component.html
+++ b/src/app/learn-modus/single-modus/single-modus.component.html
@@ -1,12 +1,20 @@
-<p>single-modus works!</p>
-<div class="tab-pane fade" id="multi">
-    <div class="col-6">
-        <div class="card border-dark mb-4">
-            <div class="card-body text-dark">
-                <h5 class="card-title">Dark card title</h5>
-                <p class="card-text">Some dummy text to make up the card's content. You can replace it anytime.</p>
-            </div>
-        </div>
+<div class="card mt-3" *ngIf="question">
+    <div class="card-header">
+        <h6 class="card-title">Question: {{question.id}}</h6>
+        <h6 class="card-text">{{question.question}}</h6>
     </div>
-
+    <ul class="list-group list-group-flush"  *ngFor="let answer of question.answers">
+        <li *ngIf="question.type !== 'fillIn'"  class="list-group-item">{{answer}}</li>
+    </ul>
+    <div> <button type="button" class="btn btn-outline-success mt-3 mb-3">Show Correct Answer</button></div>
 </div>
+
+<div class="row justify-content-between mt-3">
+<div class="col-2">
+    <button type="button" class="btn btn-outline-secondary">Prev</button>
+</div>
+<div class="col-2">
+    <button type="button" class="btn btn-outline-secondary">Next</button>
+</div>
+</div>
+
