--- a/src/app/learn-modus/single-modus/single-modus.component.html
+++ b/src/app/learn-modus/single-modus/single-modus.component.html
@@ -11,10 +11,10 @@
 
 <div class="row justify-content-between mt-3">
 <div class="col-2">
-    <button type="button" class="btn btn-outline-secondary">Prev</button>
+    <button type="button" class="btn btn-outline-secondary" [disabled]="question?.id === 1">Prev</button>
 </div>
 <div class="col-2">
-    <button type="button" class="btn btn-outline-secondary">Next</button>
+    <button type="button" class="btn btn-outline-secondary" (click)="onClickNext()">Next</button>
 </div>
 </div>
 
