--- a/src/app/learn-modus/single-modus/single-modus.component.html
+++ b/src/app/learn-modus/single-modus/single-modus.component.html
@@ -14,7 +14,7 @@
     <button type="button" class="btn btn-outline-secondary" [disabled]="question?.id === 1">Prev</button>
 </div>
 <div class="col-2">
-    <button type="button" class="btn btn-outline-secondary" (click)="onClickNext()">Next</button>
+    <button type="button" class="btn btn-outline-secondary" *ngIf="question" (click)="onClickNext(question.id)">Next</button>
 </div>
 </div>
 
