--- a/src/app/check-modus/check-modus.component.html
+++ b/src/app/check-modus/check-modus.component.html
@@ -1,22 +1,26 @@
-<div class="container mt-3">
-    <div class="card text-center">
-<div class="card">
-    <div class="card-header">
-        <h6 class="card-title">Card title</h6>
-        <h6 class="card-text">This is a question sample</h6>
-    </div>
-    <ul class="list-group list-group-flush">
-            <li class="list-group-item">An item</li>
-            <li class="list-group-item">A second item</li>
-            <li class="list-group-item">A third item</li>
-            <li class="list-group-item">A third item</li>
+<div class="container">
+    <div class="card mt-3" *ngIf="question">
+        <div class="card-header">
+            <h6 class="card-title">Question: {{question.id}}</h6>
+            <h6 class="card-text">{{question.question}}</h6>
+        </div>
+    <ul class="list-group list-group-flush"  *ngFor="let answer of question.answers">
+        <li *ngIf="question.type !== 'fillIn'"  class="list-group-item">{{answer}}</li>
     </ul>
-    <div> <button type="button" class="btn btn-outline-success mt-3 mb-3">Show Correct Answer</button></div>
+    
+    <div class="row justify-content-between">
+        <div class="col-2 ms-3">
+            <button type="button" class="btn btn-outline-secondary mt-3 mb-3"
+            [disabled]="question.id === 1" *ngIf="question" (click)="onClickPrev()">Prev</button>
+        </div>
+        <div class="col-2"> 
+            <button type="button" class="btn btn-outline-success mt-3 mb-3 "
+            (click)="submit()">Sumbit</button>
+        </div>
+        <div class="col-1">
+            <button type="button" class="btn btn-outline-secondary mt-3 mb-3"
+            [disabled]="question.id === 120" *ngIf="question" (click)="onClickNext()">Next</button>
+        </div>
+    </div>
 </div>
 
-</div>
-<div class="row justify-content-between mt-3">
-<div class="col-2"><button type="button" class="btn btn-outline-secondary">Prev</button></div>
-<div class="col-1"><button type="button" class="btn btn-outline-secondary">Next</button></div>
-</div>
-</div>
