--- a/src/app/learn-modus/multi-modus/multi-modus.component.html
+++ b/src/app/learn-modus/multi-modus/multi-modus.component.html
@@ -5,10 +5,14 @@
             <h6 class="card-title">Question: {{question.id}}</h6>
             <h6 class="card-text">{{question.question}}</h6>
         </div>
-            <ul class="list-group list-group-flush"  *ngFor="let answer of question.answers">
-                <li *ngIf="question.type !== 'fillIn'"  class="list-group-item">{{answer}}</li>
-            </ul>
-        <div> <button type="button" class="btn btn-outline-success mt-3 mb-3">Show Correct Answer</button></div>
+
+        <ul class="list-group list-group-flush"  *ngFor="let answer of question.answers">
+            <li *ngIf="question.type !== 'fillIn' && !showSolution" class="list-group-item">{{answer}}</li>
+            <li *ngIf="showSolution && question.id === questionId"  [class.bg-success] = "question.solution.includes(answer)"
+             class="list-group-item ">{{answer}}</li>
+        </ul>
+        <div> <button type="button" class="btn btn-outline-success mt-3 mb-3"
+        (click)="onClickSolution()" >Show Correct Answer</button></div>
     </div>
     
 </div>
