--- a/src/app/learn-modus/single-modus/single-modus.component.html
+++ b/src/app/learn-modus/single-modus/single-modus.component.html
@@ -4,17 +4,22 @@
         <h6 class="card-text">{{question.question}}</h6>
     </div>
     <ul class="list-group list-group-flush"  *ngFor="let answer of question.answers">
-        <li *ngIf="question.type !== 'fillIn'"  class="list-group-item">{{answer}}</li>
+        <li *ngIf="question.type !== 'fillIn' && !showSolution" class="list-group-item">{{answer}}</li>
+        <li *ngIf="showSolution"  [class.bg-success] = "question.solution.includes(answer)"
+         class="list-group-item ">{{answer}}</li>
     </ul>
-    <div> <button type="button" class="btn btn-outline-success mt-3 mb-3">Show Correct Answer</button></div>
+    <div> <button type="button" class="btn btn-outline-success mt-3 mb-3"
+        (click)="onClickSolution()">Show Correct Answer</button></div>
 </div>
 
 <div class="row justify-content-between mt-3">
 <div class="col-2">
-    <button type="button" class="btn btn-outline-secondary" [disabled]="question?.id === 1">Prev</button>
+    <button type="button" class="btn btn-outline-secondary"
+     [disabled]="question.id === 1" *ngIf="question" (click)="onClickPrev()">Prev</button>
 </div>
 <div class="col-2">
-    <button type="button" class="btn btn-outline-secondary" *ngIf="question" (click)="onClickNext(question.id)">Next</button>
+    <button type="button" class="btn btn-outline-secondary"
+     [disabled]="question.id === 120" *ngIf="question" (click)="onClickNext()">Next</button>
 </div>
 </div>
 
