--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -9,8 +9,8 @@
       <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0 ">
                 <li class="nav-item" routerLinkActive="active"><a class="nav-link" routerLink="/home">Startseite</a></li>
-                <li class="nav-item" routerLinkActive="active"><a class="nav-link" routerLink="/learn-modus">Learn Modus</a></li>
-                <li class="nav-item" routerLinkActive="active"><a class="nav-link" routerLink="/check-modus">Check Modus</a></li>
+                <li class="nav-item" routerLinkActive="active"><a class="nav-link" routerLink="/single-modus/1">Learn Modus</a></li>
+                <li class="nav-item" routerLinkActive="active"><a class="nav-link" routerLink="/check-modus/1">Check Modus</a></li>
                 <li class="nav-item" routerLinkActive="active"><a class="nav-link" routerLink="/exam-modus">Exam Modus</a></li>
               </ul> 
       </div>
