--- a/src/app/learn-modus/learn-modus.component.html
+++ b/src/app/learn-modus/learn-modus.component.html
@@ -3,7 +3,7 @@
     <div class="card-header">
         <ul class="nav nav-tabs card-header-tabs">
             <li class="nav-item">
-                <a  class="nav-link" data-bs-toggle="tab" routerLinkActive="active" routerLink="single-modus/1">Single Modus</a>
+                <a  class="nav-link" data-bs-toggle="tab" routerLinkActive="active" routerLink="single-modus">Single Modus</a>
             </li>
             <li class="nav-item">
                 <a  class="nav-link" data-bs-toggle="tab" routerLinkActive="active" routerLink="multi-modus">Multi Modus</a>
