--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -11,7 +11,7 @@
                 <li class="nav-item" routerLinkActive="active"><a class="nav-link" routerLink="/home">Startseite</a></li>
                 <li class="nav-item" routerLinkActive="active"><a class="nav-link" routerLink="learn-modus/single-modus/1">Learn Modus</a></li>
                 <li class="nav-item" routerLinkActive="active"><a class="nav-link" routerLink="check-modus/1">Check Modus</a></li>
-                <li class="nav-item" routerLinkActive="active"><a class="nav-link" routerLink="/exam-modus">Exam Modus</a></li>
+                <li class="nav-item" routerLinkActive="active"><a class="nav-link" routerLink="/exam-modus/1">Exam Modus</a></li>
               </ul> 
       </div>
     </div>
