--- a/src/app/learn-modus/learn-modus.component.html
+++ b/src/app/learn-modus/learn-modus.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-<div class="card text-center">
+<div class="card d-flex justify-content-start">
     <div class="card-header">
         <ul class="nav nav-tabs card-header-tabs">
             <li class="nav-item">
