--- a/src/app/learn-modus/single-modus/single-modus.component.html
+++ b/src/app/learn-modus/single-modus/single-modus.component.html
@@ -1,6 +1,6 @@
 <div class="card mt-3" *ngIf="question">
     <div class="card-header">
-        <h6 class="card-title">Question: {{question.id}}</h6>
+        <h6 class="card-title d-flex justify-content-center" >Question: {{question.id}}</h6>
         <h6 class="card-text">{{question.question}}</h6>
     </div>
     <ul class="list-group list-group-flush"  *ngFor="let answer of question.answers">
@@ -8,16 +8,16 @@
         <li *ngIf="showSolution"  [class.bg-success] = "question.solution.includes(answer)"
          class="list-group-item ">{{answer}}</li>
     </ul>
-    <div> <button type="button" class="btn btn-outline-success mt-3 mb-3"
+    <div class="d-flex justify-content-center"> <button type="button" class="btn btn-outline-success mt-3 mb-3"
         (click)="onClickSolution()">Show Correct Answer</button></div>
 </div>
 
-<div class="row justify-content-between mt-3">
-<div class="col-2">
+<div class="row d-flex justify-content-between mt-3">
+<div class="col d-flex justify-content-start">
     <button type="button" class="btn btn-outline-secondary"
      [disabled]="question.id === 1" *ngIf="question" (click)="onClickPrev()">Prev</button>
 </div>
-<div class="col-2">
+<div class="col d-flex justify-content-end">
     <button type="button" class="btn btn-outline-secondary"
      [disabled]="question.id === 120" *ngIf="question" (click)="onClickNext()">Next</button>
 </div>
