--- a/src/app/check-modus/popup-content/popup-content.component.html
+++ b/src/app/check-modus/popup-content/popup-content.component.html
@@ -11,7 +11,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary"
-        (click)="onClickClose()" data-bs-dismiss="modal">Close</button>
+        (click)="onClickClose()" data-bs-dismiss="modal">Dismiss</button>
         <button type="button" class="btn btn-primary"
         (click)="onClickLearn()">Learn Modus</button>
       </div>
@@ -26,14 +26,12 @@
     </div>
     
     <div class="modal-body">
-      <p>You have answered 7 questions incorrectly!!</p>
+      <p>Too many wrong answers!!</p>
       <p>you are being  redirected to the Learn Modus!</p>
     </div>
     <div class="modal-footer">
       <button type="button" class="btn btn-secondary"
-      (click)="onClickClose()" data-bs-dismiss="modal">Close</button>
-      <button type="button" class="btn btn-primary"
-      (click)="onClickLearn()">Learn Modus</button>
+      (click)="onClickClose()" data-bs-dismiss="modal">Dismiss</button>
     </div>
   </div>
 
