--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -11,28 +11,6 @@
                 <li class="nav-item" routerLinkActive="active"><a class="nav-link" routerLink="/home">Startseite</a></li>
                 <li class="nav-item" routerLinkActive="active"><a class="nav-link" routerLink="learn-modus/single-modus/1">Learn Modus</a></li>
                 <li class="nav-item" routerLinkActive="active"><a class="nav-link" routerLink="check-modus/1">Check Modus</a></li>
-                <li class="nav-item" (click)="onExamStart()" routerLinkActive="active"><a class="nav-link" routerLink="/exam-modus">Exam Modus</a></li>
+                <li class="nav-item" routerLinkActive="active"><a class="nav-link" routerLink="/exam-modus">Exam Modus</a></li>
               </ul> 
       </div>
-
-
-
-
-
-<!-- 
-<nav class="navbar navbar-light bg-light">
-    <div class="container-fluid">
-        <div class="navbar-header">
-            <a style="cursor: pointer;" class="navbar-brand">LPIC 1 LCE App</a>
-        </div>
-        <div class="collapse navbar-collapse">
-            <ul class="nav navbar-nav navbar-right">
-                <li routerLinkActive="active"><a routerLink="/home">Startseite</a></li>
-                <li routerLinkActive="active"><a routerLink="/learn-modus">Learn Modus</a></li>
-                <li routerLinkActive="active"><a routerLink="/check-modus">Check Modus</a></li>
-                <li routerLinkActive="active"><a routerLink="/exam-modus">Exam Modus</a></li>
-            </ul>
-        </div>
-    </div>
-
-</nav> -->
