--- a/src/app/check-modus/check-modus.component.html
+++ b/src/app/check-modus/check-modus.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="card mt-3" *ngIf="question">
         <div class="card-header">
-            <h6 class="card-title d-flex justify-content-center">Question: {{question.id}}</h6>
+            <h6 class="card-title d-flex justify-content-center">Question: {{question.id}} of 120</h6>
             <h6 class="card-text">{{question.question}}</h6>
         </div>
     <ul class="list-group list-group-flush"  *ngFor="let answer of question.answers">
