--- a/src/app/learn-modus/single-modus/single-modus.component.html
+++ b/src/app/learn-modus/single-modus/single-modus.component.html
@@ -1,6 +1,6 @@
 <div class="card mt-3" *ngIf="question">
     <div class="card-header">
-        <h6 class="card-title d-flex justify-content-center" >Question: {{question.id}}</h6>
+        <h6 class="card-title d-flex justify-content-center" >Question: {{question.id}} of {{questions}}</h6>
         <h6 class="card-text">{{question.question}}</h6>
     </div>
 
