--- a/src/app/exam-modus/exam-result/exam-result.component.html
+++ b/src/app/exam-modus/exam-result/exam-result.component.html
@@ -16,7 +16,7 @@
             <div class="col-md-3 col-sm-6">
                 <div class="counter blue">
                     <span class="counter-value">{{totalNotAnswred}}</span>
-                    <h3>Skipped</h3>
+                    <h3>Not answered</h3>
                 </div>
             </div>
         </div>
