--- a/src/app/exam-modus/exam-result/exam-result.component.css
+++ b/src/app/exam-modus/exam-result/exam-result.component.css
@@ -1,3 +1,13 @@
+.correct{
+    background-color: #00b539;
+    color: white;
+    }
+
+.wrong{
+    background-color: #c50c0c;
+    color: white;
+    }
+
 .counter{
     color: #fff;
     background: linear-gradient(to right bottom, #FFD81B, #f9b12a);
