--- a/src/app/exam-modus/exam-popup/exam-popup.component.html
+++ b/src/app/exam-modus/exam-popup/exam-popup.component.html
@@ -7,8 +7,8 @@
     
     <div class="modal-body">
       <p>Too many wrong answers!</p>
-      <p>Youre Score is below the 20%</p>
-      <p>Youre Score is : {{score}}%</p>
+      <p>More than 20% of the Exam's questions are answered wrong!! </p>
+      <p>Please switch to the Learn Modus!</p>
     </div>
     <div class="modal-footer">
       <button type="button" class="btn btn-secondary"
