--- a/src/app/questions/question-item/fill-in/fill-in.component.html
+++ b/src/app/questions/question-item/fill-in/fill-in.component.html
@@ -1,15 +1,19 @@
 <div class="card">
-    <div class="card-header">
-        <h6 class="card-title">Card title</h6>
-        <h6 class="card-text">This is a question sample</h6>
-    </div>
-    <ul class="list-group list-group-flush">
-            <li class="list-group-item">
-                <div class="input-group mb-3">
-                    <span class="input-group-text" id="basic-addon1">Answer:</span>
-                    <input type="text" class="form-control" placeholder="Answer" aria-label="Answer">
-                  </div>
-            </li>
-    </ul>
+  <div class="card-header">
+    <h6 class="card-title">Card title</h6>
+    <h6 class="card-text">This is a question sample</h6>
+  </div>
+  <ul class="list-group list-group-flush">
+    <li class="list-group-item">
+      <div class="input-group mb-3">
+        <span class="input-group-text" id="basic-addon1">Answer:</span>
+        <input
+          type="text"
+          class="form-control"
+          placeholder="Answer"
+          aria-label="Answer"
+        />
+      </div>
+    </li>
+  </ul>
 </div>
-
