--- a/src/app/check-modus/check-modus.component.html
+++ b/src/app/check-modus/check-modus.component.html
@@ -1,55 +1,96 @@
 <div class="container">
-    <div class="card mt-3" *ngIf="question">
-        <div class="card-header">
-            <h6 class="card-title d-flex justify-content-center">Question: {{question.id}} of 120</h6>
-            <h6 class="card-text">{{question.question}}</h6>
-        </div>
-    <ul class="list-group list-group-flush"  *ngFor="let answer of question.answers">
-        <li *ngIf="question.type == 'fillIn'"  class="list-group-item">
-            <div class="input-group mb-3">
-                <span class="input-group-text" id="basic-addon1">Answer:</span>
-                 <input type="text" [(ngModel)]="inputText" class="form-control" placeholder="Answer" aria-label="Answer">
-              </div>
-        </li>
-        <li *ngIf="question.type == 'single'"  class="list-group-item">
-            <div class="form-check">
-                <input class="form-check-input" [(ngModel)]="inputText" type="radio" [value]="answer" name="flexRadioDefault" id="flexRadioDefault1">
-                <label class="form-check-label" for="flexRadioDefault1">
-                    {{answer}}
-                </label>
-            </div>
-        </li>
-        <li *ngIf="question.type == 'multi'"  class="list-group-item">
-            <div class="form-check">
-                <input class="form-check-input"
-                 type="checkbox" [value]="answer"
-                 (change)="getCheckedAnswer($event, answer)">
-                <label class="form-check-label" for="flexCheckDefault">
-                    {{answer}}
-                </label>
-              </div>
-            
-        </li>
-    </ul>
-    
-    <div class="row justify-content-between">
-        <div class="col-2 ms-3">
-            <button type="button" class="btn btn-outline-danger mt-3 mb-3"
-            (click)="onClickEnd()">End</button>
-        </div>
-        <div class="col-2"> 
-            <button type="button" class="btn btn-outline-success mt-3 mb-3 "
-            (click)="onSubmit()">Sumbit</button>
-        </div>
-        <div class="col-2"> 
-            <button type="button" class="btn btn-outline-success mt-3 mb-3 "
-            (click)="test()">test</button>
-        </div>
-        <div class="col-1">
-            <button type="button" class="btn btn-outline-warning mt-3 mb-3"
-            [disabled]="question.id === 120" *ngIf="question" (click)="onClickSkip()">Skip</button>
-        </div>
-        
+  <div class="card mt-3" *ngIf="question">
+    <div class="card-header">
+      <h6 class="card-title d-flex justify-content-center">
+        Question: {{ question.id }} of 120
+      </h6>
+      <h6 class="card-text">{{ question.question }}</h6>
     </div>
-</div>
+    <ul
+      class="list-group list-group-flush"
+      *ngFor="let answer of question.answers"
+    >
+      <li *ngIf="question.type === 'fillIn'" class="list-group-item">
+        <div class="input-group mb-3">
+          <span class="input-group-text" id="basic-addon1">Answer:</span>
+          <input
+            type="text"
+            [(ngModel)]="inputText"
+            class="form-control"
+            placeholder="Answer"
+            aria-label="Answer"
+          />
+        </div>
+      </li>
+      <li *ngIf="question.type === 'single'" class="list-group-item">
+        <div class="form-check">
+          <input
+            class="form-check-input"
+            [(ngModel)]="inputText"
+            type="radio"
+            [value]="answer"
+            name="flexRadioDefault"
+            id="flexRadioDefault1"
+          />
+          <label class="form-check-label" for="flexRadioDefault1">
+            {{ answer }}
+          </label>
+        </div>
+      </li>
+      <li *ngIf="question.type === 'multi'" class="list-group-item">
+        <div class="form-check">
+          <input
+            class="form-check-input"
+            type="checkbox"
+            [value]="answer"
+            (change)="getCheckedAnswer($event, answer)"
+          />
+          <label class="form-check-label" for="flexCheckDefault">
+            {{ answer }}
+          </label>
+        </div>
+      </li>
+    </ul>
 
+    <div class="row justify-content-between">
+      <div class="col-2 ms-3">
+        <button
+          type="button"
+          class="btn btn-outline-danger mt-3 mb-3"
+          (click)="onClickEnd()"
+        >
+          End
+        </button>
+      </div>
+      <div class="col-2">
+        <button
+          type="button"
+          class="btn btn-outline-success mt-3 mb-3"
+          (click)="onSubmit()"
+        >
+          Sumbit
+        </button>
+      </div>
+      <div class="col-2">
+        <button
+          type="button"
+          class="btn btn-outline-success mt-3 mb-3"
+          (click)="test()"
+        >
+          test
+        </button>
+      </div>
+      <div class="col-1">
+        <button
+          type="button"
+          class="btn btn-outline-warning mt-3 mb-3"
+          [disabled]="question.id === 120"
+          *ngIf="question"
+          (click)="onClickSkip()"
+        >
+          Skip
+        </button>
+      </div>
+    </div>
+  </div>
+</div>
