--- a/src/app/check-modus/check-result/check-result.component.html
+++ b/src/app/check-modus/check-result/check-result.component.html
@@ -1,28 +1,33 @@
 <div class="container">
-    <div class="container ">
-        <div class="row d-flex justify-content-center">
-            <div class="col-md-3 col-sm-6">
-                <div class="counter green">
-                    <span class="counter-value">{{totalCorrect}}</span>
-                    <h3>Correct</h3>
-                </div>
-            </div>
-            <div class="col-md-3 col-sm-6">
-                <div class="counter red">
-                    <span class="counter-value">{{totalWrong}}</span>
-                    <h3>Wrong</h3>
-                </div>
-            </div>
-            <div class="col-md-3 col-sm-6">
-                <div class="counter blue">
-                    <span class="counter-value">{{totalSkipped}}</span>
-                    <h3>Skipped</h3>
-                </div>
-            </div>
+  <div class="container">
+    <div class="row d-flex justify-content-center">
+      <div class="col-md-3 col-sm-6">
+        <div class="counter green">
+          <span class="counter-value">{{ totalCorrect }}</span>
+          <h3>Correct</h3>
         </div>
-        <div class="d-flex justify-content-center mt-5 pt-5">
-            <button type="button" class="btn btn-outline-danger mt-3 mb-3"
-            (click)="onRestart()">Restart</button>
+      </div>
+      <div class="col-md-3 col-sm-6">
+        <div class="counter red">
+          <span class="counter-value">{{ totalWrong }}</span>
+          <h3>Wrong</h3>
         </div>
+      </div>
+      <div class="col-md-3 col-sm-6">
+        <div class="counter blue">
+          <span class="counter-value">{{ totalSkipped }}</span>
+          <h3>Skipped</h3>
+        </div>
+      </div>
     </div>
+    <div class="d-flex justify-content-center mt-5 pt-5">
+      <button
+        type="button"
+        class="btn btn-outline-danger mt-3 mb-3"
+        (click)="onRestart()"
+      >
+        Restart
+      </button>
+    </div>
+  </div>
 </div>
