--- a/src/app/exam-modus/exam-popup/exam-popup.component.html
+++ b/src/app/exam-modus/exam-popup/exam-popup.component.html
@@ -1,19 +1,31 @@
 <div>
-    <div  class="modal-header">
-      <h5 class="modal-title">Low Score!</h5>
-      <button type="button" class="btn-close"
-      (click)="onClickClose()" data-bs-dismiss="modal" aria-label="Close"></button>
-    </div>
-    
-    <div class="modal-body">
-      <p>Too many wrong answers!</p>
-      <p>More than 20% of the Exam's questions are answered wrong!! </p>
-      <p>Please switch to the Learn Modus!</p>
-    </div>
-    <div class="modal-footer">
-      <button type="button" class="btn btn-secondary"
-      (click)="onClickClose()" data-bs-dismiss="modal">Dismiss</button>
-      <button type="button" class="btn btn-primary"
-      (click)="onClickLearn()">Learn Modus</button>
-    </div>
+  <div class="modal-header">
+    <h5 class="modal-title">Low Score!</h5>
+    <button
+      type="button"
+      class="btn-close"
+      (click)="onClickClose()"
+      data-bs-dismiss="modal"
+      aria-label="Close"
+    ></button>
   </div>
+
+  <div class="modal-body">
+    <p>Too many wrong answers!</p>
+    <p>More than 20% of the Exam's questions are answered wrong!!</p>
+    <p>Please switch to the Learn Modus!</p>
+  </div>
+  <div class="modal-footer">
+    <button
+      type="button"
+      class="btn btn-secondary"
+      (click)="onClickClose()"
+      data-bs-dismiss="modal"
+    >
+      Dismiss
+    </button>
+    <button type="button" class="btn btn-primary" (click)="onClickLearn()">
+      Learn Modus
+    </button>
+  </div>
+</div>
