--- a/src/app/exam-modus/exam-result/exam-result.component.html
+++ b/src/app/exam-modus/exam-result/exam-result.component.html
@@ -1,41 +1,68 @@
-<div class="container mb-5 ">
-        <div class="row d-flex justify-content-center">
-            <div class="col-md-3 col-sm-6">
-                <div class="counter green">
-                    <span class="counter-value">{{totalCorrect}}</span>
-                    <h3>Correct</h3>
-                </div>
-            </div>
-            <div class="col-md-3 col-sm-6">
-                <div class="counter red">
-                    <span class="counter-value">{{totalWrong}}</span>
-                    <h3>Wrong</h3>
-                </div>
-            </div>
-            <div class="col-md-3 col-sm-6">
-                <div class="counter blue">
-                    <span class="counter-value">{{totalNotAnswred}}</span>
-                    <h3>Not answered</h3>
-                </div>
-            </div>
-        </div>
-        <div class="d-flex justify-content-center mt-5 pt-5">
-            <button type="button" class="btn btn-outline-danger mt-3 mb-3"
-            (click)="onRestart()">Restart</button>
-        </div>
-            <div class="card mt-3 " *ngFor="let item of combinedAnswers">
-                <div class="card-header" [ngClass]="{'correctAnswer': item.isCorrect , 'wrongAnswer': !item.isCorrect}">
-                    <h6 class="card-title d-flex justify-content-center">Question: {{item.questionId + 1}} of {{combinedAnswers.length}}</h6>
-                    <h6 class="card-text">{{item.question?.question}}</h6>
-                </div>
-                    <ul  class="list-group list-group-flush"  *ngFor="let answer of item.question?.answers">
-                        <li *ngIf="item.question && item.isCorrect"  [class.correct] = "item.question.solution.includes(answer)"
-                        class="list-group-item ">{{answer}}</li>
-                        <div *ngIf="item.question && !item.isCorrect">
-                            <li [ngClass]="{'correct': item.question.solution.includes(answer), 'wrong': item.answers.includes(answer)}"
-                             class="list-group-item ">{{answer}}</li>
-                        </div>
-                    </ul>
-            
-            </div>
-        </div>
+<div class="container mb-5">
+  <div class="row d-flex justify-content-center">
+    <div class="col-md-3 col-sm-6">
+      <div class="counter green">
+        <span class="counter-value">{{ totalCorrect }}</span>
+        <h3>Correct</h3>
+      </div>
+    </div>
+    <div class="col-md-3 col-sm-6">
+      <div class="counter red">
+        <span class="counter-value">{{ totalWrong }}</span>
+        <h3>Wrong</h3>
+      </div>
+    </div>
+    <div class="col-md-3 col-sm-6">
+      <div class="counter blue">
+        <span class="counter-value">{{ totalNotAnswred }}</span>
+        <h3>Not answered</h3>
+      </div>
+    </div>
+  </div>
+  <div class="d-flex justify-content-center mt-5 pt-5">
+    <button
+      type="button"
+      class="btn btn-outline-danger mt-3 mb-3"
+      (click)="onRestart()"
+    >
+      Restart
+    </button>
+  </div>
+  <div class="card mt-3" *ngFor="let item of combinedAnswers">
+    <div
+      class="card-header"
+      [ngClass]="{
+        correctAnswer: item.isCorrect,
+        wrongAnswer: !item.isCorrect
+      }"
+    >
+      <h6 class="card-title d-flex justify-content-center">
+        Question: {{ item.questionId + 1 }} of {{ combinedAnswers.length }}
+      </h6>
+      <h6 class="card-text">{{ item.question?.question }}</h6>
+    </div>
+    <ul
+      class="list-group list-group-flush"
+      *ngFor="let answer of item.question?.answers"
+    >
+      <li
+        *ngIf="item.question && item.isCorrect"
+        [class.correct]="item.question.solution.includes(answer)"
+        class="list-group-item"
+      >
+        {{ answer }}
+      </li>
+      <div *ngIf="item.question && !item.isCorrect">
+        <li
+          [ngClass]="{
+            correct: item.question.solution.includes(answer),
+            wrong: item.answers.includes(answer)
+          }"
+          class="list-group-item"
+        >
+          {{ answer }}
+        </li>
+      </div>
+    </ul>
+  </div>
+</div>
