--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,16 +1,35 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light mb-3">
   <div class="container">
-    <a style="cursor: pointer;" class="navbar-brand">LPIC 1 LCE App</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+    <a style="cursor: pointer" class="navbar-brand">LPIC 1 LCE App</a>
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-bs-toggle="collapse"
+      data-bs-target="#navbarTogglerDemo02"
+      aria-controls="navbarTogglerDemo02"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
       <span class="navbar-toggler-icon"></span>
     </button>
-        <div class="d-flex">
-        </div>
-      <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
-        <ul class="navbar-nav ms-auto mb-2 mb-lg-0 ">
-                <li class="nav-item" routerLinkActive="active"><a class="nav-link" routerLink="/home">Startseite</a></li>
-                <li class="nav-item" routerLinkActive="active"><a class="nav-link" routerLink="learn-modus/single-modus/1">Learn Modus</a></li>
-                <li class="nav-item" routerLinkActive="active"><a class="nav-link" routerLink="check-modus/1">Check Modus</a></li>
-                <li class="nav-item" routerLinkActive="active"><a class="nav-link" routerLink="/exam-modus">Exam Modus</a></li>
-              </ul> 
-      </div>
+    <div class="d-flex"></div>
+    <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+      <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+        <li class="nav-item" routerLinkActive="active">
+          <a class="nav-link" routerLink="/home">Startseite</a>
+        </li>
+        <li class="nav-item" routerLinkActive="active">
+          <a class="nav-link" routerLink="learn-modus/single-modus/1"
+            >Learn Modus</a
+          >
+        </li>
+        <li class="nav-item" routerLinkActive="active">
+          <a class="nav-link" routerLink="check-modus/1">Check Modus</a>
+        </li>
+        <li class="nav-item" routerLinkActive="active">
+          <a class="nav-link" routerLink="/exam-modus">Exam Modus</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
