--- a/src/app/learn-modus/learn-modus.component.html
+++ b/src/app/learn-modus/learn-modus.component.html
@@ -1,18 +1,31 @@
 <div class="container">
-<div class="card d-flex justify-content-start">
+  <div class="card d-flex justify-content-start">
     <div class="card-header">
-        <ul class="nav nav-tabs card-header-tabs">
-            <li class="nav-item">
-                <a  class="nav-link" data-bs-toggle="tab" routerLinkActive="active" routerLink="single-modus">Single Modus</a>
-            </li>
-            <li class="nav-item">
-                <a  class="nav-link" data-bs-toggle="tab" routerLinkActive="active" routerLink="multi-modus">Multi Modus</a>
-            </li>
-        </ul>
+      <ul class="nav nav-tabs card-header-tabs">
+        <li class="nav-item">
+          <a
+            class="nav-link"
+            data-bs-toggle="tab"
+            routerLinkActive="active"
+            routerLink="single-modus"
+            >Single Modus</a
+          >
+        </li>
+        <li class="nav-item">
+          <a
+            class="nav-link"
+            data-bs-toggle="tab"
+            routerLinkActive="active"
+            routerLink="multi-modus"
+            >Multi Modus</a
+          >
+        </li>
+      </ul>
     </div>
     <div class="card-body">
-        <div class="tab-content">
-            <router-outlet></router-outlet>
-        </div>
+      <div class="tab-content">
+        <router-outlet></router-outlet>
+      </div>
     </div>
+  </div>
 </div>
