--- a/src/app/questions/question-item/multi-choice/multi-choice.component.html
+++ b/src/app/questions/question-item/multi-choice/multi-choice.component.html
@@ -1,16 +1,16 @@
 <div class="card">
-    <div class="card-header">
-        <h6 class="card-title">Card title</h6>
-        <h6 class="card-text">This is a question sample</h6>
-    </div>
-    <ul class="list-group list-group-flush">
-            <li class="list-group-item">
-                <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="">
-                    <label class="form-check-label" for="flexCheckDefault">
-                     Answer n 1
-                    </label>
-                  </div>
-            </li>
-    </ul>
+  <div class="card-header">
+    <h6 class="card-title">Card title</h6>
+    <h6 class="card-text">This is a question sample</h6>
+  </div>
+  <ul class="list-group list-group-flush">
+    <li class="list-group-item">
+      <div class="form-check">
+        <input class="form-check-input" type="checkbox" value="" />
+        <label class="form-check-label" for="flexCheckDefault">
+          Answer n 1
+        </label>
+      </div>
+    </li>
+  </ul>
 </div>
