--- a/src/app/questions/question-item/single-choice/single-choice.component.html
+++ b/src/app/questions/question-item/single-choice/single-choice.component.html
@@ -1,16 +1,21 @@
 <div class="card">
-    <div class="card-header">
-        <h6 class="card-title">Card title</h6>
-        <h6 class="card-text">This is a question sample</h6>
-    </div>
-    <ul class="list-group list-group-flush">
-            <li class="list-group-item">
-                <div class="form-check">
-                    <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
-                    <label class="form-check-label" for="flexRadioDefault1">
-                      Answer n 1
-                    </label>
-                </div>
-            </li>
-    </ul>
+  <div class="card-header">
+    <h6 class="card-title">Card title</h6>
+    <h6 class="card-text">This is a question sample</h6>
+  </div>
+  <ul class="list-group list-group-flush">
+    <li class="list-group-item">
+      <div class="form-check">
+        <input
+          class="form-check-input"
+          type="radio"
+          name="flexRadioDefault"
+          id="flexRadioDefault1"
+        />
+        <label class="form-check-label" for="flexRadioDefault1">
+          Answer n 1
+        </label>
+      </div>
+    </li>
+  </ul>
 </div>
