--- a/src/app/learn-modus/single-modus/single-modus.component.html
+++ b/src/app/learn-modus/single-modus/single-modus.component.html
@@ -54,7 +54,7 @@
   <div class="col d-flex justify-content-start">
     <button
       type="button"
-      class="btn btn-outline-secondary"
+      class="btn btn-outline-primary"
       [disabled]="question.id === 1"
       *ngIf="question"
       (click)="onClickPrev()"
@@ -65,7 +65,7 @@
   <div class="col d-flex justify-content-end">
     <button
       type="button"
-      class="btn btn-outline-secondary"
+      class="btn btn-outline-primary"
       [disabled]="question.id === 120"
       *ngIf="question"
       (click)="onClickNext()"
