--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,9 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light mb-3">
   <div class="container">
-    <a style="cursor: pointer" class="navbar-brand">LPIC 1 LCE App</a>
+    <a class="navbar-brand">
+      <img src="../img/logo.png" alt="" class="d-inline-block align-text-top" />
+      LPIC 1 LCE App</a
+    >
     <button
       class="navbar-toggler"
       type="button"
