--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,9 +1,13 @@
-<div class="container">
-  <div class="col">
-    <p>Welcome Message</p>
-    <p>Bild</p>
-  </div>
-  <div class="col">
-    <p>Beschreibung</p>
+<div class="container border">
+  <div class="row">
+    <div class="col border">
+      <p>Welcome Message</p>
+      <div class="col">
+        <p>Bild</p>
+      </div>
+    </div>
+    <div class="col border">
+      <p>Beschreibung</p>
+    </div>
   </div>
 </div>
