--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,7 +3,7 @@
     <div class="col border">
       <p>Welcome Message</p>
       <div class="col">
-        <p>Bild</p>
+        <img src="" alt="" />
       </div>
     </div>
     <div class="col border">
