--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,13 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light mb-3">
+<nav class="nvbar navbar navbar-expand-lg navbar-light bg-light mb-3">
   <div class="container">
     <a class="navbar-brand">
-      <img src="../../assets/img/logo.png" alt="" width="36" height="30" class="d-inline-block align-text-top" />
+      <img
+        src="../../assets/img/logo.png"
+        alt=""
+        width="36"
+        height="30"
+        class="d-inline-block align-text-top"
+      />
       LPIC 1 LCE App</a
     >
     <button
@@ -19,18 +25,26 @@
     <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
         <li class="nav-item" routerLinkActive="active">
-          <a class="nav-link" routerLink="/home">Startseite</a>
+          <a class="nav-link rounded-pill menu-item" routerLink="/home"
+            >Startseite</a
+          >
         </li>
         <li class="nav-item" routerLinkActive="active">
-          <a class="nav-link" routerLink="learn-modus/single-modus/1"
+          <a
+            class="nav-link rounded-pill menu-item"
+            routerLink="learn-modus/single-modus/1"
             >Learn Modus</a
           >
         </li>
         <li class="nav-item" routerLinkActive="active">
-          <a class="nav-link" routerLink="check-modus/1">Check Modus</a>
+          <a class="nav-link rounded-pill menu-item" routerLink="check-modus/1"
+            >Check Modus</a
+          >
         </li>
         <li class="nav-item" routerLinkActive="active">
-          <a class="nav-link" routerLink="/exam-modus">Exam Modus</a>
+          <a class="nav-link rounded-pill menu-item" routerLink="/exam-modus"
+            >Exam Modus</a
+          >
         </li>
       </ul>
     </div>
