--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -5,7 +5,13 @@
 
 .zoom:hover {
   border-color: 0px 0px 15px 1px rgba(45, 255, 196, 1);
+  box-shadow: 0.4em 0.4em 1em rgb(255, 187, 0);
   transform: scale(
     0.9
   ); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+}
+
+.justify {
+  margin: 0.4em;
+  text-align: justify;
 }
