--- a/src/app/check-modus/check-modus.component.html
+++ b/src/app/check-modus/check-modus.component.html
@@ -31,7 +31,7 @@
     >
       <use xlink:href="#info-fill" />
     </svg>
-    <div>An example alert with an icon</div>
+    <div>You are working on the <span class="bold"> {{getQuestionListName()}} </span></div>
   </div>
 
   <div class="card mt-3" *ngIf="question">
