--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -18,7 +18,7 @@
         </a>
       </div>
     </div>
-    <div class="col">
+    <div class="col mt-2">
       <p class="lh-lg justify">
         Diese App bietet Ihnen die Möglichkeit um sich vorzubereiten auf die
         internationale Zertifizierungsprüfungen für Prüfungen des Linux
